adds torctl, scraper